fix: Small styling fix for bs5 tables being placed behind scroller panel

--- a/css/scroller.bootstrap5.scss
+++ b/css/scroller.bootstrap5.scss
@@ -1,1 +1,6 @@
 @import 'scroller.dataTables.scss';
+
+div.DTS div.dataTables_scrollBody table {
+	// Don't have transparent rows
+	background-color: white;
+}
